infrastructure-as-code/Terraform-Modules/vpc/igw.tf
resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.this.id
  tags = merge(var.tags, {
    Name = "${var.project_name}-${terraform.workspace}-igw"
  })

}
